--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fontsource/poppins": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
     "hamburger-react": "^2.5.2",
     "react": "^19.1.0",
